--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <section id="photoNameTitle">
         <img id="photo" src="./assets/images/2023-06-06 - Self-Portrait.jpg" alt="Portrait of Alexander Brik">
-        <div id="nameTitle">
+        <div id="nameTitle" class="sectionTitle">
             <div>
                 <div>Alexander Brik</div>
                 <div id="title">Full Stack Developer</div>
@@ -44,35 +44,49 @@
             Projects
         </div>
         <div class="project">
-            <div class="projectDescription">
+            <div class="flexContainer rightAlign">
+              <div class="flexContainer rightAlign">
+                <img src="./assets/gifs/etchASketch.gif" alt="gif preview of Etch-A-Sketch Project">
+              </div>
+            </div>
+            <div class="flexContainer leftAlign projectDescriptionContainer">
+              <div class="projectDescription">
                 <div class="projectTitle">Etch-A-Sketch</div>
-                <div>Webiste that allows users to draw pictures in the style of an Etch-A-Sketch. Users can change resolution, opacity, and color.</div>
+                <div>Webiste that allows users to draw pictures in the style of an Etch-A-Sketch. Users can change resolution, opacity, and color. aaaaaadsfadsfadfasfdsfdasfas asdfklasdjflkasjfklasdjfaklsfdj aslkdfjaslkfjlsadkjfalksdfjf sdlkfjadslkfjalskfjalsd asdlfkjaslkfjaklsdfjsl asdlkfjasdlkfjadlskfjsdklf asldkfjalsdfjalksdfj asdlkjfasdklfjskladfj aslkfjaklsfdj</div>
                 <a href="https://alexb528.github.io/Etch-a-Sketch/" target="_blank">Live Site</a>
                 <a href="https://github.com/AlexB528/Etch-a-Sketch" target="_blank">Repository</a>
+              </div>
+            </div>
+        </div>
 
+        <div class="project">
+            <div class="flexContainer leftAlign">
+              <img src="./assets/gifs/toDoMovie.gif" alt="gif preview of Planner Project">
             </div>
-            <img src="./assets/gifs/etchASketch.gif" alt="gif preview of Etch-A-Sketch Project">
+            <div class="flexContainer rightAlign projectDescriptionContainer">
+              <div class="projectDescription">
+                  <div class="projectTitle">Planner website</div>
+                  <div>Users can add projects. Tasks can then be added to a project. The calendar on the side can be expanded from weekly to monthly in order to see upcoming due dates.</div>
+                  <a href="https://alexb528.github.io/To-Do-List/" target="_blank">Live Site</a>
+                  <a href="https://github.com/AlexB528/To-Do-List" target="_blank">Repository</a>
+              </div>
+            </div>
         </div>
         <div class="project">
-            <img src="./assets/gifs/toDoMovie.gif" alt="gif preview of Etch-A-Sketch Project">
-            <div class="projectDescription">
-                <div class="projectTitle">Planner website</div>
-                <div>Users can add projects. Tasks can then be added to a project. The calendar on the side can be expanded from weekly to monthly in order to see upcoming due dates.</div>
-                <a href="https://alexb528.github.io/To-Do-List/" target="_blank">Live Site</a>
-                <a href="https://github.com/AlexB528/To-Do-List" target="_blank">Repository</a>
+            <div class="flexContainer rightAlign">
+              <img src="./assets/gifs/cvGeneratorVideo.gif" alt="gif preview of CV Generator Project">
             </div>
-        </div>
-        <div class="project">
-            <div class="projectDescription">
+            <div class="flexContainer leftAlign projectDescriptionContainer">
+              <div class="projectDescription">
                 <div class="projectTitle">CV Generator</div>
                 <div>Users can enter informatoin about themselves and have it formatted as a resume. Resume's can be downloaded as pdf or word files.</div>
                 <a href="https://alexb528.github.io/CV-Generator/" target="_blank">Live Site</a>
                 <a href="https://github.com/AlexB528/CV-Generator" target="_blank">Repository</a>
+              </div>
             </div>
-            <img src="./assets/gifs/cvGeneratorVideo.gif" alt="gif preview of Etch-A-Sketch Project">
-        </div>
+        </div>        
     </section>
-    <section class="contact" id="contact">
+    <section id="contact">
       <div class="sectionTitle">Get In Touch With Me</div>
       <div class="contact-form-container">
         <div class="contact-form">
