--- a/index.html
+++ b/index.html
@@ -13,20 +13,22 @@
 <body>
     <nav id="navBar">
         <a href="#nameTitle" class="nav-Title">Alexander Brik</a>
-        <ul class="navigation">
-          <li><a href="#nameTitle" class="nav-link-right-side">Home</a></li>
-          <li><a href="#about" class="nav-link-right-side">About</a></li>
-          <li><a href="#projects" class="nav-link-right-side">Projects</a></li>
-          <li><a href="#contact" class="nav-link-right-side">Contact</a></li>
-        </ul>
-        <button class="burger-menu" id="burger-menu">
-          <svg class="burgerMenuIcon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-            <g fill="currentColor">
-              <title>menu</title>
-              <path d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z" />
-            </g>
-          </svg>
-        </button>
+        <div id="menuContainer">
+          <button class="burger-menu" id="burger-menu">
+            <svg class="burgerMenuIcon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <g fill="currentColor">
+                <title>menu</title>
+                <path d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z" />
+              </g>
+            </svg>
+          </button>
+          <ul class="navigation">
+            <li><a href="#nameTitle" class="nav-link">Home</a></li>
+            <li><a href="#about" class="nav-link">About</a></li>
+            <li><a href="#projects" class="nav-link">Projects</a></li>
+            <li><a href="#contact" class="nav-link">Contact</a></li>
+          </ul>
+        </div>
     </nav>
     <section id="nameTitle">
       <div id="name">Alexander Brik</div>
