remove cors option from fetch

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <li><a href="#nameTitle" class="nav-link">Home</a></li>
             <li><a href="#about" class="nav-link">About</a></li>
             <li><a href="#projects" class="nav-link">Projects</a></li>
+            <li><a href="#blog" class="nav-link">Blog</a></li>
             <li><a href="#contact" class="nav-link">Contact</a></li>
           </ul>
         </div>
@@ -101,6 +102,11 @@
               </div>
             </div>
         </div>        
+    </section>
+    <section id="blog">
+      <div class="sectionTitle">Alexander's Blog</div>
+      <a href="blog.html" target="_blank">Blog Page</a>
+
     </section>
     <section id="contact">
       <div class="sectionTitle">Get In Touch With Me</div>
