--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
             <li><a href="#nameTitle" class="nav-link">Home</a></li>
             <li><a href="#about" class="nav-link">About</a></li>
             <li><a href="#projects" class="nav-link">Projects</a></li>
-            <li><a href="#blog" class="nav-link">Blog</a></li>
             <li><a href="#contact" class="nav-link">Contact</a></li>
           </ul>
         </div>
@@ -61,12 +60,51 @@
             Projects
         </div>
         <div class="project">
-            <div class="flexContainer rightAlign">
-              <div class="flexContainer rightAlign">
-                <img src="./assets/gifs/etchASketch.gif" alt="gif preview of Etch-A-Sketch Project">
-              </div>
+          <div class="flexContainer rightAlign">
+            <img src="./assets/gifs/movieMaster.gif" alt="gif preview of Planner Project">
+          </div>
+          <div class="flexContainer leftAlign projectDescriptionContainer">
+            <div class="projectDescription">
+                <div class="projectTitle">Movie Master</div>
+                <div>Users can search movies based on keywords and filters. Information about each movie can be viewd upon clicking the movie. Users can create accounts and save their favourite movies.
+                  This application was built using a react front end and a node.js and express backend. Authentication is handled by JWT using passport middleware.
+                </div>
+                <a href="https://alexb528.github.io/Movie_Master/" target="_blank">Live Site</a>
+                <a href="https://github.com/AlexB528/Movie_Master" target="_blank">Repository</a>
             </div>
-            <div class="flexContainer leftAlign projectDescriptionContainer">
+          </div>
+        </div>
+        <div class="project">
+          <div class="flexContainer leftAlign">
+            <img src="./assets/gifs/toDoMovie.gif" alt="gif preview of Planner Project">
+          </div>
+          <div class="flexContainer rightAlign projectDescriptionContainer">
+            <div class="projectDescription">
+                <div class="projectTitle">Planner website</div>
+                <div>Users can add projects. Tasks can then be added to a project. The calendar on the side can be expanded from weekly to monthly in order to see upcoming due dates.</div>
+                <a href="https://alexb528.github.io/To-Do-List/" target="_blank">Live Site</a>
+                <a href="https://github.com/AlexB528/To-Do-List" target="_blank">Repository</a>
+            </div>
+          </div>
+        </div>
+        <div class="project">
+          <div class="flexContainer rightAlign">
+            <img src="./assets/gifs/cvGeneratorVideo.gif" alt="gif preview of CV Generator Project">
+          </div>
+          <div class="flexContainer leftAlign projectDescriptionContainer">
+            <div class="projectDescription">
+              <div class="projectTitle">CV Generator</div>
+              <div>Users can enter informatoin about themselves and have it formatted as a resume. Resume's can be downloaded as pdf or word files.</div>
+              <a href="https://alexb528.github.io/CV-Generator/" target="_blank">Live Site</a>
+              <a href="https://github.com/AlexB528/CV-Generator" target="_blank">Repository</a>
+            </div>
+          </div>
+        </div>
+        <div class="project">
+            <div class="flexContainer leftAlign">
+              <img src="./assets/gifs/etchASketch.gif" alt="gif preview of Etch-A-Sketch Project">
+            </div>
+            <div class="flexContainer rightAlign projectDescriptionContainer">
               <div class="projectDescription">
                 <div class="projectTitle">Etch-A-Sketch</div>
                 <div>Webiste that allows users to draw pictures in the style of an Etch-A-Sketch. Users can change resolution, opacity, and color. aaaaaadsfadsfadfasfdsfdasfas asdfklasdjflkasjfklasdjfaklsfdj aslkdfjaslkfjlsadkjfalksdfjf sdlkfjadslkfjalskfjalsd asdlfkjaslkfjaklsdfjsl asdlkfjasdlkfjadlskfjsdklf asldkfjalsdfjalksdfj asdlkjfasdklfjskladfj aslkfjaklsfdj</div>
@@ -76,37 +114,7 @@
             </div>
         </div>
 
-        <div class="project">
-            <div class="flexContainer leftAlign">
-              <img src="./assets/gifs/toDoMovie.gif" alt="gif preview of Planner Project">
-            </div>
-            <div class="flexContainer rightAlign projectDescriptionContainer">
-              <div class="projectDescription">
-                  <div class="projectTitle">Planner website</div>
-                  <div>Users can add projects. Tasks can then be added to a project. The calendar on the side can be expanded from weekly to monthly in order to see upcoming due dates.</div>
-                  <a href="https://alexb528.github.io/To-Do-List/" target="_blank">Live Site</a>
-                  <a href="https://github.com/AlexB528/To-Do-List" target="_blank">Repository</a>
-              </div>
-            </div>
-        </div>
-        <div class="project">
-            <div class="flexContainer rightAlign">
-              <img src="./assets/gifs/cvGeneratorVideo.gif" alt="gif preview of CV Generator Project">
-            </div>
-            <div class="flexContainer leftAlign projectDescriptionContainer">
-              <div class="projectDescription">
-                <div class="projectTitle">CV Generator</div>
-                <div>Users can enter informatoin about themselves and have it formatted as a resume. Resume's can be downloaded as pdf or word files.</div>
-                <a href="https://alexb528.github.io/CV-Generator/" target="_blank">Live Site</a>
-                <a href="https://github.com/AlexB528/CV-Generator" target="_blank">Repository</a>
-              </div>
-            </div>
-        </div>        
-    </section>
-    <section id="blog">
-      <div class="sectionTitle">Alexander's Blog</div>
-      <a href="blog.html" target="_blank">Blog Page</a>
-
+                
     </section>
     <section id="contact">
       <div class="sectionTitle">Get In Touch With Me</div>
