change desription for Etch-A-Sketch Project

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="flexContainer rightAlign projectDescriptionContainer">
               <div class="projectDescription">
                 <div class="projectTitle">Etch-A-Sketch</div>
-                <div>Webiste that allows users to draw pictures in the style of an Etch-A-Sketch. Users can change resolution, opacity, and color. aaaaaadsfadsfadfasfdsfdasfas asdfklasdjflkasjfklasdjfaklsfdj aslkdfjaslkfjlsadkjfalksdfjf sdlkfjadslkfjalskfjalsd asdlfkjaslkfjaklsdfjsl asdlkfjasdlkfjadlskfjsdklf asldkfjalsdfjalksdfj asdlkjfasdklfjskladfj aslkfjaklsfdj</div>
+                <div>Webiste that allows users to draw pictures in the style of an Etch-A-Sketch. Users can change resolution, opacity, and color.</div>
                 <a href="https://alexb528.github.io/Etch-a-Sketch/" target="_blank">Live Site</a>
                 <a href="https://github.com/AlexB528/Etch-a-Sketch" target="_blank">Repository</a>
               </div>
