add character finder application to projects

--- a/index.html
+++ b/index.html
@@ -70,15 +70,33 @@
                   This application was built using a react front end and a node.js and express backend. Authentication is handled by JWT using passport middleware.
                 </div>
                 <a href="https://alexb528.github.io/Movie_Master/" target="_blank">Live Site</a>
-                <a href="https://github.com/AlexB528/Movie_Master" target="_blank">Repository</a>
+                <a href="https://github.com/AlexB528/Movie_Master" target="_blank">Repository (front end)</a>
+                <a href="https://github.com/AlexB528/Movie_Master_Backend" target="_blank">Repository (back end)</a>
             </div>
           </div>
         </div>
         <div class="project">
           <div class="flexContainer leftAlign">
-            <img src="./assets/gifs/toDoMovie.gif" alt="gif preview of Planner Project">
+            <img src="./assets/gifs/char-finder-gif.gif" alt="gif preview of character finder project">
           </div>
           <div class="flexContainer rightAlign projectDescriptionContainer">
+            <div class="projectDescription">
+                <div class="projectTitle">Character Finder</div>
+                <div>As with the game Where's Waldo, users have to search an image full of many familiar characters to find a short list of characters.
+                  The time it takes users to complete the game is tracked and users have the option of entering their name afterwords to post themselves
+                  to the leaderboard. The front of this application was built using react. It fetches from a back end I created using Node.js and express.
+                </div>
+                <a href="https://alexb528.github.io/Character-Finder/" target="_blank">Live Site</a>
+                <a href="https://github.com/AlexB528/Character-Finder" target="_blank">Repository (front end)</a>
+                <a href="https://github.com/AlexB528/Character-Finder-Backend" target="_blank">Repository (back end)</a>
+            </div>
+          </div>
+        </div>
+        <div class="project">
+          <div class="flexContainer rightAlign">
+            <img src="./assets/gifs/toDoMovie.gif" alt="gif preview of Planner Project">
+          </div>
+          <div class="flexContainer leftAlign projectDescriptionContainer">
             <div class="projectDescription">
                 <div class="projectTitle">Planner website</div>
                 <div>Users can add projects. Tasks can then be added to a project. The calendar on the side can be expanded from weekly to monthly in order to see upcoming due dates.</div>
@@ -88,10 +106,10 @@
           </div>
         </div>
         <div class="project">
-          <div class="flexContainer rightAlign">
+          <div class="flexContainer leftAlign">
             <img src="./assets/gifs/cvGeneratorVideo.gif" alt="gif preview of CV Generator Project">
           </div>
-          <div class="flexContainer leftAlign projectDescriptionContainer">
+          <div class="flexContainer rightAlign projectDescriptionContainer">
             <div class="projectDescription">
               <div class="projectTitle">CV Generator</div>
               <div>Users can enter informatoin about themselves and have it formatted as a resume. Resume's can be downloaded as pdf or word files.</div>
@@ -101,10 +119,10 @@
           </div>
         </div>
         <div class="project">
-            <div class="flexContainer leftAlign">
+            <div class="flexContainer rightAlign">
               <img src="./assets/gifs/etchASketch.gif" alt="gif preview of Etch-A-Sketch Project">
             </div>
-            <div class="flexContainer rightAlign projectDescriptionContainer">
+            <div class="flexContainer leftAlign projectDescriptionContainer">
               <div class="projectDescription">
                 <div class="projectTitle">Etch-A-Sketch</div>
                 <div>Webiste that allows users to draw pictures in the style of an Etch-A-Sketch. Users can change resolution, opacity, and color.</div>
